# tuscot

./: Cargo.toml  main.cy
src/: ast.rs  evaluator.rs  lib.rs  main.rs  objects.rs  parser.rs  token.rs
