[package]
name = "tuscot"
version = "0.1.0"
authors = ["Rishi Kothari <itsrishikothari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tuscot"
path = "src/lib.rs"

[[bin]]
name = "tuscot"
path = "src/main.rs"

[dependencies]
colored = "2"